# algokit-consistency-analysis

./: .gitignore  .gitmodules  README.md  setup_submodules.sh
.github/workflows/: deploy-website.yaml
analysis/: README.md
analysis/aggregated/: cross-repo-summary.md  executive-summary.md
analysis/by-category/01-python-library/: algokit-subscriber-py-analysis.md  algokit-utils-py-analysis.md  comparative-analysis.md  github-workflows-comparison-report.md
analysis/by-category/02-python-cli-tool/: algokit-cli-analysis.md  algokit-client-generator-py-analysis.md
analysis/by-category/03-python-compiler/: algorand-python-testing-analysis.md  puya-analysis.md
analysis/by-category/04-typescript-library/: algokit-subscriber-ts-analysis.md  algokit-utils-ts-analysis.md  algokit-utils-ts-debug-analysis.md  algorand-typescript-testing-analysis.md  comparative-analysis.md  github-workflows-comparison-report.md
analysis/by-category/05-typescript-cli-tool/: algokit-avm-debugger-analysis.md  algokit-client-generator-ts-analysis.md  puya-ts-analysis.md
analysis/by-category/06-frontend-web-app/: algokit-lora-analysis.md
analysis/by-category/07-vscode-extension/: algokit-avm-vscode-debugger-analysis.md
analysis/by-category/08-serverless-backend/: algokit-dispenser-api-analysis.md
analysis/by-category/09-static-site/: algokit-example-gallery-analysis.md
analysis/by-tech-stack/python/: algokit-cli-analysis.md  algokit-client-generator-py-analysis.md  algokit-subscriber-py-analysis.md  algokit-utils-py-analysis.md  algorand-python-testing-analysis.md  puya-analysis.md
analysis/by-tech-stack/typescript/: algokit-avm-debugger-analysis.md  algokit-avm-vscode-debugger-analysis.md  algokit-client-generator-ts-analysis.md  algokit-dispenser-api-analysis.md  algokit-example-gallery-analysis.md  algokit-lora-analysis.md  algokit-subscriber-ts-analysis.md  algokit-utils-ts-analysis.md  algokit-utils-ts-debug-analysis.md  algorand-typescript-testing-analysis.md  puya-ts-analysis.md
docs/: REPO-CATEGORIZATION-LOGIC.md  SINGLE-REPO-ANALYSIS-PLAN.md
py-lib-ref-impl/: .gitattributes  README.md  pyproject.toml
py-lib-ref-impl/.github/: dependabot.yml
py-lib-ref-impl/.github/workflows/: gh-pages.yml  pr.yml  prod-release.yml
py-lib-ref-impl/docs/: conf.py  index.rst
py-lib-ref-impl/src/py_lib_ref_impl/: __init__.py  example.py
py-lib-ref-impl/tests/: test_example.py
python-library-reference-implementation/: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
python-library-reference-implementation/.github/ISSUE_TEMPLATE/: feature_request.md
python-library-reference-implementation/.github/workflows/: python-ci.yml  release.yml
python-library-reference-implementation/docs/: api.rst  conf.py  index.rst
python-library-reference-implementation/tests/: __init__.py  test_example.py
ts-lib-ref-impl/: .env.template  .gitignore  .prettierignore  .releaserc.json  README.md  package-lock.json  package.json  tsconfig.json  typedoc.json  vitest.config.ts
ts-lib-ref-impl/.github/: pull_request_template.md
ts-lib-ref-impl/.github/workflows/: release.yml
ts-lib-ref-impl/src/: example.ts  index.ts
typescript-library-reference-implementation/: README.md  eslint.config.mjs  package-lock.json  package.json  rollup-multi-plugin.ts  rollup.config.ts  typedoc.json
typescript-library-reference-implementation/.github/ISSUE_TEMPLATE/: bug_report.md
typescript-library-reference-implementation/.github/workflows/: gh-pages.yml  node-ci.yml  pr.yml
typescript-library-reference-implementation/src/: example.spec.ts  example.ts
website/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/scripts/: prepare-content.js
website/src/components/cards/: CategoryCard.astro  RepositoryCard.astro
website/src/components/layout/: Layout.astro
website/src/content/: config.ts
website/src/data/: categories.json  repositories.json
website/src/pages/: index.astro
website/src/pages/categories/: [category].astro  index.astro
website/src/pages/comparisons/: [slug].astro
website/src/pages/repositories/: [slug].astro
website/src/pages/tech-stack/: [stack].astro  index.astro
